build/xtask/tests/snapshots/i2c_stages__Analysis.snap
---
source: build/xtask/tests/i2c-stages.rs
expression: out
---
Report {
    role: Initiator,
    component_ids: false,
    controllers: [
        I2cController {
            controller: 2,
            ports: {
                "F": I2cPort {
                    name: Some(
                        "i2c2",
                    ),
                    description: None,
                    scl: I2cPin {
                        gpio_port: None,
                        pin: 1,
                    },
                    sda: I2cPin {
                        gpio_port: None,
                        pin: 0,
                    },
                    af: 4,
                    muxes: [],
                },
            },
            target: false,
        },
        I2cController {
            controller: 3,
            ports: {
                "C": I2cPort {
                    name: Some(
                        "i2c3",
                    ),
                    description: None,
                    scl: I2cPin {
                        gpio_port: Some(
                            "A",
                        ),
                        pin: 8,
                    },
                    sda: I2cPin {
                        gpio_port: Some(
                            "C",
                        ),
                        pin: 9,
                    },
                    af: 4,
                    muxes: [],
                },
            },
            target: false,
        },
        I2cController {
            controller: 4,
            ports: {
                "F": I2cPort {
                    name: Some(
                        "i2c4",
                    ),
                    description: None,
                    scl: I2cPin {
                        gpio_port: None,
                        pin: 14,
                    },
                    sda: I2cPin {
                        gpio_port: None,
                        pin: 15,
                    },
                    af: 4,
                    muxes: [],
                },
            },
            target: false,
        },
    ],
    ports: [
        NamedPort {
            name: "F",
            port: ControllerPort {
                controller: 2,
                index: 0,
            },
        },
        NamedPort {
            name: "C",
            port: ControllerPort {
                controller: 3,
                index: 0,
            },
        },
        NamedPort {
            name: "F",
            port: ControllerPort {
                controller: 4,
                index: 0,
            },
        },
    ],
    buses: {
        "i2c2": ControllerPort {
            controller: 2,
            index: 0,
        },
        "i2c3": ControllerPort {
            controller: 3,
            index: 0,
        },
        "i2c4": ControllerPort {
            controller: 4,
            index: 0,
        },
    },
    devices: [],
    by_device: [],
    by_bus: [],
    by_name: [],
    by_refdes: [],
    by_controller: [],
    by_port: [],
    max_component_id_len: 0,
    rails: PowerRails {
        pmbus: [],
        non_pmbus: [],
    },
    sensors: SensorsDescription {
        by_device: {},
        by_refdes: {},
        by_name: {},
        by_id: {},
        device_sensors: [],
        total_i2c_sensors: 0,
        other_sensors: [],
        total_other_sensors: 0,
    },
    sensor_structs: [],
    validation: None,
}
