build/xtask/tests/snapshots/i2c_stages__Load.snap
---
source: build/xtask/tests/i2c-stages.rs
expression: out
---
I2cConfig {
    controllers: [
        I2cController {
            controller: 2,
            ports: {
                "F": I2cPort {
                    name: Some(
                        "i2c2",
                    ),
                    description: None,
                    scl: I2cPin {
                        gpio_port: None,
                        pin: 1,
                    },
                    sda: I2cPin {
                        gpio_port: None,
                        pin: 0,
                    },
                    af: 4,
                    muxes: [],
                },
            },
            target: false,
        },
        I2cController {
            controller: 3,
            ports: {
                "C": I2cPort {
                    name: Some(
                        "i2c3",
                    ),
                    description: None,
                    scl: I2cPin {
                        gpio_port: Some(
                            "A",
                        ),
                        pin: 8,
                    },
                    sda: I2cPin {
                        gpio_port: Some(
                            "C",
                        ),
                        pin: 9,
                    },
                    af: 4,
                    muxes: [],
                },
            },
            target: false,
        },
        I2cController {
            controller: 4,
            ports: {
                "F": I2cPort {
                    name: Some(
                        "i2c4",
                    ),
                    description: None,
                    scl: I2cPin {
                        gpio_port: None,
                        pin: 14,
                    },
                    sda: I2cPin {
                        gpio_port: None,
                        pin: 15,
                    },
                    af: 4,
                    muxes: [],
                },
            },
            target: false,
        },
    ],
    devices: None,
}
